# Animal_Helper

./: README.md
backend/: .gitignore  LICENSE  README.md  pyproject.toml
backend/app/: .env.example  main.py
backend/app/api/routers/: __init__.py  comments.py  hostels.py  reports.py
backend/app/models/: comments.py  reports.py  shelters.py
backend/app/services/: quality_scoring.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  style.css
frontend/src/components/: CommentsSection.jsx  Navbar.jsx  ReportModal.jsx  RepresentModal.jsx  ShelterInfo.jsx  ShelterMap.jsx
frontend/src/hooks/: useAllComments.js  useComments.js  useShelters.js
frontend/src/utils/: shelterScore.js
